--- a/app/src/main/res/layout/fragment_make_order.xml
+++ b/app/src/main/res/layout/fragment_make_order.xml
@@ -30,7 +30,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -163,6 +164,7 @@
             </LinearLayout>
 
             <Button
+                android:id="@+id/perform"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:layout_margin="@dimen/main_margin"
