--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -17,4 +17,29 @@
         <item name="android:layout_height">0.5dp</item>
         <item name="android:background">@color/light_grey</item>
     </style>
+
+    <style name="text_big_dark_grey">
+        <item name="android:textSize">@dimen/size_big</item>
+        <item name="android:textColor">@color/dark_grey</item>
+    </style>
+
+    <style name="text_middle_dark_grey">
+        <item name="android:textSize">@dimen/size_middle</item>
+        <item name="android:textColor">@color/dark_grey</item>
+    </style>
+
+    <style name="text_middle_light_grey">
+        <item name="android:textSize">@dimen/size_middle</item>
+        <item name="android:textColor">@color/light_grey</item>
+    </style>
+
+    <style name="text_small_dark_grey">
+        <item name="android:textSize">@dimen/size_small</item>
+        <item name="android:textColor">@color/dark_grey</item>
+    </style>
+
+    <style name="text_small_light_grey">
+        <item name="android:textSize">@dimen/size_small</item>
+        <item name="android:textColor">@color/light_grey</item>
+    </style>
 </resources>
