--- a/app/src/main/res/layout/activity_dailian.xml
+++ b/app/src/main/res/layout/activity_dailian.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.chichiangho.base.widgets.TitleLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.chichiangho.common.base.TitleLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -32,4 +32,4 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</com.chichiangho.base.widgets.TitleLayout>
+</com.chichiangho.common.base.TitleLayout>
