--- a/app/src/main/res/layout/fragment_make_order.xml
+++ b/app/src/main/res/layout/fragment_make_order.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:background="@color/transparent"
+            android:background="@color/tab_checked"
             android:focusable="false"
             android:hint="选择需要代练的游戏名称"
             android:textColorHint="@color/light_grey" />
@@ -138,7 +138,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/main_margin"
                     android:text="价格"
-                    android:textColor="@color/title_bg_color" />
+                    android:textColor="@color/main_color" />
 
                 <EditText
                     android:id="@+id/et_input_price"
@@ -159,7 +159,7 @@
                     android:layout_margin="5dp"
                     android:background="@drawable/btn_stroke_red"
                     android:text="价格计算器"
-                    android:textColor="@color/title_bg_color"
+                    android:textColor="@color/main_color"
                     android:textSize="@dimen/size_small" />
             </LinearLayout>
 
