--- a/common/src/main/res/values/dimens.xml
+++ b/common/src/main/res/values/dimens.xml
@@ -2,7 +2,11 @@
 <resources>
     <dimen name="divider_width">0.5dp</dimen>
     <dimen name="title_height">45dp</dimen>
+    <dimen name="label_height">45dp</dimen>
+    <dimen name="size_big">14sp</dimen>
     <dimen name="size_middle">12dp</dimen>
+    <dimen name="size_small">10dp</dimen>
     <dimen name="tab_height">50dp</dimen>
     <dimen name="tab_divider_height">2dp</dimen>
+    <dimen name="main_margin">15dp</dimen>
 </resources>
