--- a/widget_date_time_picker/src/main/res/layout/layout_date_picker.xml
+++ b/widget_date_time_picker/src/main/res/layout/layout_date_picker.xml
@@ -11,33 +11,35 @@
 
         <TextView
             android:id="@+id/cancel"
-            style="@style/text_middle_light_grey"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/main_margin"
-            android:padding="@dimen/main_margin"
-            android:text="取消" />
+            android:layout_marginLeft="15dp"
+            android:padding="15dp"
+            android:text="取消"
+            android:textColor="@color/picker_color_default"
+            android:textSize="@dimen/picker_text_default" />
 
         <TextView
             android:id="@+id/resultTv"
-            style="@style/text_middle_dark_grey"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true" />
+            android:layout_centerInParent="true"
+            android:textColor="@color/picker_color_default"
+            android:textSize="@dimen/picker_text_default" />
 
         <TextView
             android:id="@+id/perform"
-            style="@style/text_middle_light_grey"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="@dimen/main_margin"
-            android:padding="@dimen/main_margin"
+            android:layout_marginRight="15dp"
+            android:padding="15dp"
             android:text="确定"
-            android:textColor="@color/main_color" />
+            android:textColor="@color/picker_color_theme"
+            android:textSize="@dimen/picker_text_default" />
     </RelativeLayout>
 
     <LinearLayout
@@ -52,14 +54,14 @@
             android:layout_margin="3dp"
             android:layout_weight="3"
             android:visibility="gone"
-            app:DividerColor="@color/main_color"
+            app:DividerColor="@color/picker_color_theme"
             app:HintText="年"
             app:ItemPaddingVertical="10dp"
-            app:TextColorHint="@color/main_color"
-            app:TextColorSelected="@color/main_color"
-            app:TextSizeHint="@dimen/size_middle"
-            app:TextSizeNormal="@dimen/size_middle"
-            app:TextSizeSelected="@dimen/size_middle" />
+            app:TextColorHint="@color/picker_color_theme"
+            app:TextColorSelected="@color/picker_color_theme"
+            app:TextSizeHint="@dimen/picker_text_default"
+            app:TextSizeNormal="@dimen/picker_text_default"
+            app:TextSizeSelected="@dimen/picker_text_default" />
 
         <com.chichiangho.widget_date_time_picker.OptimizedNumberPicker
             android:id="@+id/monthPicker"
@@ -68,14 +70,14 @@
             android:layout_margin="3dp"
             android:layout_weight="2"
             android:visibility="gone"
-            app:DividerColor="@color/main_color"
+            app:DividerColor="@color/picker_color_theme"
             app:HintText="月"
             app:ItemPaddingVertical="10dp"
-            app:TextColorHint="@color/main_color"
-            app:TextColorSelected="@color/main_color"
-            app:TextSizeHint="@dimen/size_middle"
-            app:TextSizeNormal="@dimen/size_middle"
-            app:TextSizeSelected="@dimen/size_middle" />
+            app:TextColorHint="@color/picker_color_theme"
+            app:TextColorSelected="@color/picker_color_theme"
+            app:TextSizeHint="@dimen/picker_text_default"
+            app:TextSizeNormal="@dimen/picker_text_default"
+            app:TextSizeSelected="@dimen/picker_text_default" />
 
         <com.chichiangho.widget_date_time_picker.OptimizedNumberPicker
             android:id="@+id/dayPicker"
@@ -84,14 +86,14 @@
             android:layout_margin="3dp"
             android:layout_weight="2"
             android:visibility="gone"
-            app:DividerColor="@color/main_color"
+            app:DividerColor="@color/picker_color_theme"
             app:HintText="日"
             app:ItemPaddingVertical="10dp"
-            app:TextColorHint="@color/main_color"
-            app:TextColorSelected="@color/main_color"
-            app:TextSizeHint="@dimen/size_middle"
-            app:TextSizeNormal="@dimen/size_middle"
-            app:TextSizeSelected="@dimen/size_middle" />
+            app:TextColorHint="@color/picker_color_theme"
+            app:TextColorSelected="@color/picker_color_theme"
+            app:TextSizeHint="@dimen/picker_text_default"
+            app:TextSizeNormal="@dimen/picker_text_default"
+            app:TextSizeSelected="@dimen/picker_text_default" />
 
         <com.chichiangho.widget_date_time_picker.OptimizedNumberPicker
             android:id="@+id/hourPicker"
@@ -100,14 +102,14 @@
             android:layout_margin="3dp"
             android:layout_weight="2"
             android:visibility="gone"
-            app:DividerColor="@color/main_color"
+            app:DividerColor="@color/picker_color_theme"
             app:HintText="时"
             app:ItemPaddingVertical="10dp"
-            app:TextColorHint="@color/main_color"
-            app:TextColorSelected="@color/main_color"
-            app:TextSizeHint="@dimen/size_middle"
-            app:TextSizeNormal="@dimen/size_middle"
-            app:TextSizeSelected="@dimen/size_middle" />
+            app:TextColorHint="@color/picker_color_theme"
+            app:TextColorSelected="@color/picker_color_theme"
+            app:TextSizeHint="@dimen/picker_text_default"
+            app:TextSizeNormal="@dimen/picker_text_default"
+            app:TextSizeSelected="@dimen/picker_text_default" />
 
         <com.chichiangho.widget_date_time_picker.OptimizedNumberPicker
             android:id="@+id/minutePicker"
@@ -116,13 +118,13 @@
             android:layout_margin="3dp"
             android:layout_weight="2"
             android:visibility="gone"
-            app:DividerColor="@color/main_color"
+            app:DividerColor="@color/picker_color_theme"
             app:HintText="分"
             app:ItemPaddingVertical="10dp"
-            app:TextColorHint="@color/main_color"
-            app:TextColorSelected="@color/main_color"
-            app:TextSizeHint="@dimen/size_middle"
-            app:TextSizeNormal="@dimen/size_middle"
-            app:TextSizeSelected="@dimen/size_middle" />
+            app:TextColorHint="@color/picker_color_theme"
+            app:TextColorSelected="@color/picker_color_theme"
+            app:TextSizeHint="@dimen/picker_text_default"
+            app:TextSizeNormal="@dimen/picker_text_default"
+            app:TextSizeSelected="@dimen/picker_text_default" />
     </LinearLayout>
 </LinearLayout>
